--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
+    #Edytowane przed drugie konto Gracjan Zarzycki 19433
     <title>INDEX</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
